@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1078 2009-10-23 16:28:00 castaglia Exp $
+$Id: NEWS,v 1.1079 2009-10-27 16:45:05 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -14,6 +14,7 @@ CVS
 - Bug 3303 - FileZilla reports "Server did not properly shut down TLS
   connection" after TimeoutIdle triggered.
 - Bug 3305 - Emulate Solaris 10 syslog "header" on Solaris 10 servers.
+- Bug 3307 - All FTP logins treated as anonymous logins.
 
 1.3.3rc2 - Released 20-Oct-2009
 --------------------------------
